<?xml version="1.0"?>
<package format="3">
  <name>utilities</name>
  <version>2.0.0</version>
  <description>Utilities package for CSSR4Africa behavior controller - ROS2 version with simplified data structures</description>
  
  <maintainer email="dvernon@andrew.cmu.edu">David Vernon</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>rclcpp</depend>
  <depend>yaml-cpp</depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
