<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>language_model</name>
  <version>0.0.0</version>
  <description>RAG system server wrapper for large language model</description>
  <maintainer email="mahadanso79@gmail.com">Muhammed Danso</maintainer>
  <license>Apache-2.0</license>

  <depend>rclpy</depend>
  <depend>llm_interfaces</depend>
  <depend>openai</depend>
  <depend>chromadb</depend>
  <depend>sentence-transformers</depend>

  <!-- <exec_depend>llm_interfaces</exec_depend> -->

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
