<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pepper_navigation</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="yohatad000@gmail.com">yoha</maintainer>
  <license>TODO: License declaration</license>

  <depend>nav2_bringup</depend>
  <depend>nav2_map_server</depend>
  <depend>nav2_amcl</depend>
  <depend>nav2_controller</depend>
  <depend>nav2_planner</depend>
  <depend>nav2_behaviors</depend>
  <depend>nav2_bt_navigator</depend>
  <depend>nav2_lifecycle_manager</depend>
  <depend>nav2_costmap_2d</depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
